force-app/main/default/objects/Shipping_Rates_Table__c/Shipping_Rates_Table__c.object-meta.xml
<CustomObject>
    <description>Shipping Rate table used in Service fee calculation (CRM + MP)</description>
    <label>Shipping Rates Table</label>
    <nameField>
        <displayFormat>SRT-{YYYY}-{000}</displayFormat>
        <label>Shipping Rates Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Rates Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>