force-app/main/default/objects/Shipping_Rates_Table__c/fields/Fixed_Mileage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Mileage_Amount__c</fullName>
    <description>Fixed Mileage amount to apply based based on Fixed mileage fee flag.</description>
    <label>Fixed Mileage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>