force-app/main/default/objects/Shipping_Rates_Table__c/fields/Fixed_Mileage_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Mileage_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fixed Mileage fee flag to apply fixed mileage amount Vs Mileage bracket amount</description>
    <label>Fixed Mileage Fee</label>
    <type>Checkbox</type>
</CustomField>