force-app/main/default/objects/Shipping_Rates_Table__c/fields/Fixed_Weight_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Weight_Amount__c</fullName>
    <description>Fixed Weight amount to apply based based on Fixed weight fee flag.</description>
    <label>Fixed Weight Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>