force-app/main/default/objects/Shipping_Rates_Table__c/fields/Fixed_Weight_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Weight_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fixed Weight fee flag to apply fixed weight amount Vs weight bracket amount</description>
    <label>Fixed Weight Fee</label>
    <type>Checkbox</type>
</CustomField>