force-app/main/default/objects/Shipping_Rates_Table__c/fields/Mileage_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Bracket__c</fullName>
    <inlineHelpText>Mileage Bracket used to Calculate Shipment Cost and Pricing</inlineHelpText>
    <label>Mileage Bracket</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>