force-app/main/default/objects/Shipping_Rates_Table__c/fields/Mileage_Bracket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Bracket_Cost__c</fullName>
    <inlineHelpText>Company Calculated Mileage Bracket Cost based SG&amp;A and Work Center Load</inlineHelpText>
    <label>Mileage Bracket Cost</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>