force-app/main/default/objects/Shipping_Rates_Table__c/fields/Mileage_Bracket_Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Bracket_Mark_Up__c</fullName>
    <label>Mileage Bracket Mark-Up</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>