force-app/main/default/objects/Shipping_Rates_Table__c/fields/Mileage_Bracket_Price__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Bracket_Price__c</fullName>
    <formula>( Mileage_Bracket_Cost__c *  Mileage_Bracket_Mark_Up__c ) + Mileage_Bracket_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage Bracket Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>