force-app/main/default/objects/Shipping_Rates_Table__c/fields/Rate_Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Rate_Effective_To__c</fullName>
    <label>Rate Effective To</label>
    <type>Date</type>
</CustomField>