force-app/main/default/objects/Shipping_Rates_Table__c/fields/Shipping_GM__c.field-meta.xml
<CustomField>
    <fullName>Shipping_GM__c</fullName>
    <formula>Shipping_GP__c / Total_Bracket_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping GM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>