force-app/main/default/objects/Shipping_Rates_Table__c/fields/Shipping_GP__c.field-meta.xml
<CustomField>
    <fullName>Shipping_GP__c</fullName>
    <formula>Total_Bracket_Price__c -  Total_Bracket_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>