force-app/main/default/objects/Shipping_Rates_Table__c/fields/Total_Bracket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Bracket_Cost__c</fullName>
    <formula>Weight_Bracket_Cost__c +  Mileage_Bracket_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bracket Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>