force-app/main/default/objects/Shipping_Rates_Table__c/fields/Weight_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Weight_Bracket__c</fullName>
    <inlineHelpText>Dimensional (DIM) or Gross Weight Bracket used to Calculate Cost and Price</inlineHelpText>
    <label>Weight Bracket</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>