force-app/main/default/objects/Shipping_Rates_Table__c/fields/Weight_Bracket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Weight_Bracket_Cost__c</fullName>
    <inlineHelpText>Company Calculated Dimensional (DIM) or Gross Weight Cost based on SG&amp;A and Work Center Load</inlineHelpText>
    <label>Weight Bracket Cost</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>