force-app/main/default/objects/Shipping_Rates_Table__c/fields/Weight_Bracket_Price__c.field-meta.xml
<CustomField>
    <fullName>Weight_Bracket_Price__c</fullName>
    <formula>(Weight_Bracket_Cost__c *  Weight_Bracket_Mark_Up__c ) + Weight_Bracket_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Bracket Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>