force-app/main/default/objects/Shipping_Rates_Table__c/validationRules/Mileage_Fee_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_Fee_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Fixed_Mileage_Fee__c &amp;&amp; ISNULL( Fixed_Mileage_Amount__c )</errorConditionFormula>
    <errorDisplayField>Fixed_Mileage_Amount__c</errorDisplayField>
    <errorMessage>* Required</errorMessage>
</ValidationRule>