force-app/main/default/objects/Shipping_Rates_Table__c/validationRules/Weight_Fee_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Fee_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Fixed_Weight_Fee__c  &amp;&amp;   ISNULL(Fixed_Weight_Amount__c)</errorConditionFormula>
    <errorDisplayField>Fixed_Weight_Amount__c</errorDisplayField>
    <errorMessage>* Required</errorMessage>
</ValidationRule>