force-app/main/default/objects/Shipping_Rates_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Weight_Bracket__c</columns>
    <columns>Weight_Bracket_Price__c</columns>
    <columns>Mileage_Bracket__c</columns>
    <columns>Mileage_Bracket_Price__c</columns>
    <columns>Rate_Effective_From__c</columns>
    <columns>Rate_Effective_To__c</columns>
    <columns>Weight_Bracket_Mark_Up__c</columns>
    <columns>Mileage_Bracket_Mark_Up__c</columns>
    <columns>Weight_Bracket_Cost__c</columns>
    <columns>Mileage_Bracket_Cost__c</columns>
    <columns>Shipping_GM__c</columns>
    <columns>Active__c</columns>
    <columns>Site__c</columns>
    <columns>Membership_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>