force-app/main/default/objects/Shipping_Rates_Table__c/listViews/Retail.listView-meta.xml
<ListView>
    <fullName>Retail</fullName>
    <columns>NAME</columns>
    <columns>Weight_Bracket__c</columns>
    <columns>Weight_Bracket_Price__c</columns>
    <columns>Mileage_Bracket__c</columns>
    <columns>Mileage_Bracket_Price__c</columns>
    <columns>Rate_Effective_From__c</columns>
    <columns>Rate_Effective_To__c</columns>
    <columns>Weight_Bracket_Mark_Up__c</columns>
    <columns>Mileage_Bracket_Mark_Up__c</columns>
    <columns>Weight_Bracket_Cost__c</columns>
    <columns>Mileage_Bracket_Cost__c</columns>
    <columns>Shipping_GM__c</columns>
    <columns>Active__c</columns>
    <columns>Site__c</columns>
    <columns>Membership_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Membership_Level__c</field>
        <operation>equals</operation>
        <value>Retail</value>
    </filters>
    <label>Retail</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>